# WordleReader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wordlereader.cpp
